force-app/main/default/objects/APIsConfig__c/fields/APIDocumentURL__c.field-meta.xml
<CustomField>
    <fullName>APIDocumentURL__c</fullName>
    <label>API Document URL</label>
    <type>Url</type>
</CustomField>