force-app/main/default/objects/APIsConfig__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>API Config Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>