force-app/main/default/objects/APIsConfig__c/fields/APIOutputFormat__c.field-meta.xml
<CustomField>
    <fullName>APIOutputFormat__c</fullName>
    <label>API Output Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APIDataOutputFormat</valueSetName>
    </valueSet>
</CustomField>