force-app/main/default/objects/APIsConfig__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <type>TextArea</type>
</CustomField>