force-app/main/default/objects/APIsConfig__c/fields/TargetSystemOwnerCompany__c.field-meta.xml
<CustomField>
    <fullName>TargetSystemOwnerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target System Owner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>API CONFIG</relationshipLabel>
    <relationshipName>APIConfig</relationshipName>
    <type>Lookup</type>
</CustomField>